fix alignment on homepage heading

--- a/express/code/blocks/gen-ai-cards/gen-ai-cards.css
+++ b/express/code/blocks/gen-ai-cards/gen-ai-cards.css
@@ -227,6 +227,7 @@
 .gen-ai-cards .card .media-wrapper {
   border-radius: var(--spacing-border-radius-large);
   height: var(--media-wrapper-height);
+  min-height: var(--media-wrapper-height);;
   overflow: hidden;
 }
 
@@ -413,13 +414,14 @@ main .gen-ai-cards.homepage .carousel-container .carousel-fader-right {
 
 .gen-ai-cards.homepage .gen-ai-cards-heading {
   font-size: var(--font-size-heading-mobile);
+  text-align: center;
 }
 
 .section .gen-ai-cards-wrapper.homepage {
   max-width: fit-content;
 }
 
-.gen-ai-cards .gen-ai-cards-heading-section h3,
+.gen-ai-cards .gen-ai-cards-heading-section h2,
 .gen-ai-cards .gen-ai-cards-heading-section p {
   text-align: left;
   max-width: none;
